# spread

./: .gitattributes  .gitignore  CHANGELOG.md  PRD.md  README.md  Research.md  STYLE.md  build.gradle.kts  gradle.properties  gradlew  keystore.properties.template  settings.gradle.kts  upload-to-play.py
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: demo.epub
app/src/main/kotlin/app/spread/data/: BookRepository.kt  NativeParser.kt  SettingsRepository.kt
app/src/main/kotlin/app/spread/data/db/: AppDatabase.kt  BookDao.kt  Entities.kt
app/src/main/kotlin/app/spread/domain/: Model.kt  State.kt  Timing.kt  Tokenizer.kt
app/src/main/kotlin/app/spread/ui/: FontSizing.kt  MainActivity.kt  ReaderScreen.kt  ReaderViewModel.kt  SettingsSheet.kt  WordDisplayPreview.kt
app/src/main/kotlin/app/spread/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/raw/: keep.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/kotlin/app/spread/domain/: StateTest.kt  TimingTest.kt  TokenizerTest.kt  WordFitTest.kt
app/src/test/kotlin/app/spread/ui/: JumpToDialogScreenshotTest.kt  NarrowScreenScreenshotTest.kt  TextMeasurementTest.kt  WordDisplayScreenshotTest.kt
docs/: index.html  privacy.html
rust/: Cargo.toml  README.md  build-android.sh
rust/src/: epub.rs  jni.rs  lib.rs  tokenizer.rs  types.rs
rust/tests/fixtures/: pride-and-prejudice.epub
