[package]
name = "spread_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Dynamic library for JNI

[dependencies]
# EPUB parsing
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = "0.31"
# JNI bindings
jni = "0.21"
# Error handling
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
